--- a/src/styles/nav-bar.css
+++ b/src/styles/nav-bar.css
@@ -1,9 +1,9 @@
-@import url("index.css");
+@import url("../index.css");
 
 .nav-bar{
     background-color: #064106; 
     position: absolute;
-    height: 10%;
+    height: 15%;
     top: 0;
     width: 100%;
 }
@@ -11,12 +11,13 @@
 .nav-bar-list{
     margin: 20px 0;
     list-style: none;
-    height: 100%;
+    height: 90%;
 }
 
 .nav-bar-element{
     box-sizing: border-box;
     padding: 10px;
+    margin-bottom: 50px;
     width: 20%;
     height: 90%;
     float: left;
@@ -25,7 +26,7 @@
 .nav-bar-button{
     margin: auto;
     border-radius: 20%;
-    background-color: #e4d18e;
+    background-color: #d8be61;
     width: 60%;
     height: 80%;
     font-size: 1.6em; 
