--- a/src/styles/domains.css
+++ b/src/styles/domains.css
@@ -1,81 +1,30 @@
-@import url("../index.css");
+@import url('../index.css');
 
-.content {
-    background-color: #064106; 
-    position: absolute;
-    height: 80%;
+.domain-search-result{
+    position: relative;
     margin: auto;
-    width: 80%;
-    top: 20%;
-    left: 10%;
-    box-sizing: content-box;
+    width: 20%;
+    height: 5%;
+    top: 5%;
+    max-height: 80px;
+    min-height: 40px;
+    margin-top: 20px;
+    font-size: 1.3em;
+    padding: 10px;
+    border-radius: 5%;
+    text-align: center;
+    background-color: #d8be61;
+    box-sizing: content-box; 
 }
 
-.search-bar {
+.domains-search-bar {
     position: relative;
-    margin: 0;
-    width: 90%;
+    margin: auto;
+    width: 60%;
     height: 80px;
     max-height: 100px;
-    left: 5%;
-    right: 5%;
     top: 5%;
     background-color: #d8be61;
-    border-radius: 5%;
-}
-
-.search-bar-text {
-    position: relative;
-    margin: 0;
-    padding: 2px;
-    left: 2%;
-    float: left;
-    top: 20%;
-    height: 60%;
-    width: 40%;
-    box-sizing: content-box;
-    border-radius: 5%;
-}
-
-.search-type {
-    position: relative;
-    margin: 0;
-    padding: 2px;
-    padding-left: 5px;
-    left: 2%;
-    float: left;
-    top: 20%;
-    height: 60%;
-    width: 30%;
-    box-sizing: content-box;
-    border-radius: 5%;
-}
-
-.search-bar-radio {
-    position: relative;
-    top: 2.5%;
-    width: 100%;
-    height: 50%;
-    text-align: start;
-}
-
-.search-bar-radio input{
-    position: relative;
-    top: 10%;
-    width: 20%;
-    height: 80%;
-    box-sizing: content-box;
-    margin: 0;
-}
-
-.search-button {
-    top: 0;
-    margin: 0;
-    position: relative;
-    float: left;
-    top: 20%;
-    height: 60%;
-    margin-left: 10px;
-    width: 10%;
-    box-sizing: content-box;
+    border-radius: 2%;
+    box-sizing: content-box; 
 }
