--- a/src/styles/domains-search.css
+++ b/src/styles/domains-search.css
@@ -33,7 +33,7 @@
     float: left;
     top: 20%;
     height: 60%;
-    width: 30%;
+    width: 20%;
     box-sizing: content-box;
     border-radius: 5%;
 }
@@ -55,14 +55,25 @@
     margin: 0;
 }
 
-.search-button {
+.search-buttons {
     top: 0;
     margin: 0;
     position: relative;
     float: left;
     top: 20%;
-    height: 60%;
-    margin-left: 10px;
-    width: 10%;
+    height: 65%;
+    width: 35%;
     box-sizing: content-box;
+}
+
+.button {
+    top: 0;
+    margin: auto;
+    position: relative;
+    float: left;
+    height: 100%;
+    padding: 2%;
+    margin-left: 5%;
+    width: 40%;
+    box-sizing: border-box;
 }
