--- a/src/styles/domains.css
+++ b/src/styles/domains.css
@@ -20,11 +20,26 @@
 .domains-search-bar {
     position: relative;
     margin: auto;
+    margin-bottom: 20px;
     width: 60%;
-    height: 80px;
-    max-height: 100px;
+    height: 100px;
+    max-height: 120px;
     top: 5%;
     background-color: #d8be61;
     border-radius: 2%;
     box-sizing: content-box; 
+}
+
+.domains-splitting-line {
+    top: 10%;
+    margin-top: 20px;
+    position: relative;
+    box-sizing: content-box;
+}
+
+hr {
+    height: 3px;
+    color: #dfe090;
+    background-color: #dfe090;
+    border: none;
 }
