--- a/src/styles/domains-search.css
+++ b/src/styles/domains-search.css
@@ -1,14 +1,26 @@
 @import url("../index.css");
 
-.content {
-    background-color: #064106; 
-    position: absolute;
-    height: 80%;
+.domains-search {
+    position: relative;
     margin: auto;
-    width: 80%;
-    top: 20%;
-    left: 10%;
-    box-sizing: content-box;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 200px;
+    max-height: 220px;
+    top: 5%;
+    box-sizing: content-box; 
+}
+
+.domains-search-bar {
+    position: relative;
+    margin: auto;
+    margin-bottom: 20px;
+    width: 60%;
+    height: 100px;
+    max-height: 120px;
+    background-color: #d8be61;
+    border-radius: 2%;
+    box-sizing: content-box; 
 }
 
 .search-bar-text {
@@ -76,4 +88,12 @@
     margin-left: 5%;
     width: 40%;
     box-sizing: border-box;
+}
+
+.domains-search-result {
+    margin: auto;
+    width: 30%;
+    height: 45%;
+    top: 5%;
+    margin-top: 20px;
 }
