--- a/src/styles/domains-info.css
+++ b/src/styles/domains-info.css
@@ -15,3 +15,17 @@
     box-sizing: border-box; 
 }
 
+.my-domain-info-buble {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    max-height: 80px;
+    min-height: 40px;
+    font-size: 1.3em;
+    padding: 2% 10%;
+    border-radius: 5%;
+    text-align: center;
+    background-color: #d8be61;
+    box-sizing: border-box; 
+}
