--- a/src/styles/domains-search.css
+++ b/src/styles/domains-search.css
@@ -1,14 +1,9 @@
 @import url("../index.css");
 
 .domains-search {
-    position: relative;
-    margin: auto;
-    margin-bottom: 20px;
     width: 100%;
-    height: 200px;
-    max-height: 220px;
-    top: 5%;
-    box-sizing: content-box; 
+    height: 100%;
+    position: relative;
 }
 
 .domains-search-bar {
