--- a/src/styles/domains.css
+++ b/src/styles/domains.css
@@ -1,20 +1,41 @@
 @import url('../index.css');
 
 .content {
-    background-color: #064106; 
     position: absolute;
     height: 80%;
     margin: auto;
-    width: 80%;
+    width: 90%;
     top: 20%;
-    left: 10%;
+    left: 5%;
     box-sizing: content-box;
 }
 
-.domains-splitting-line {
-    top: 10%;
+.domains-search {
     position: relative;
-    box-sizing: content-box;
+    margin: auto;
+    border-radius: 10px;
+    padding-top: 1%;
+    background-color: #064106; 
+    margin-bottom: 20px;
+    width: 100%;
+    height: 200px;
+    max-height: 250px;
+    top: 5%;
+    box-sizing: content-box; 
+}
+
+.my-domains {
+    position: relative;
+    margin: auto;
+    border-radius: 10px;
+    margin-top: 1%;
+    padding-block-start: 20px;
+    background-color: #064106; 
+    width: 100%;
+    top: 5%;
+    padding-bottom: 20px;
+    box-sizing: content-box; 
+    margin-bottom: 20px;
 }
 
 hr {
