--- a/src/styles/nav-bar.css
+++ b/src/styles/nav-bar.css
@@ -3,33 +3,44 @@
 .nav-bar{
     background-color: #064106; 
     position: absolute;
-    height: 12.5%;
+    height: 10%;
     top: 0;
     width: 100%;
 }
 
 .nav-bar-list{
-    margin: 20px 0;
     list-style: none;
-    height: 90%;
+    top: 0;
+    height: 100%;
+    left: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-list-bar-element {
+    position: relative;
+    box-sizing: border-box;
+    width: 20%;
+    height: 100%;
+    float: left;
 }
 
 .nav-bar-element{
+    position: relative;
     box-sizing: border-box;
-    padding: 10px;
-    margin-bottom: 50px;
-    width: 20%;
-    height: 90%;
-    float: left;
+    width: 100%;
+    height: 80%;
+    top: 10%;
 }
 
 .nav-bar-button{
     margin: auto;
     border-radius: 20%;
     background-color: #d8be61;
+    left: 20%;
     width: 60%;
-    height: 80%;
-    font-size: 1.6em; 
+    top: 5%;
+    height: 90%;
 }
 
 .nav-bar-link {
