--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,105 @@
 @import url("../index.css");
 
-h2 {
-    margin-top: 200px;
+#home-page {
+    top: 20%;
+    height: 60%;
+    width: 50%;
+    left: 25%;
+    background-color: #064106; 
+    border-radius: 5%;
+    position: absolute;
+}
+
+input {
+    text-align: center;
+    background-color: #e4d18e;
+    font-size: 1.3em; 
+    width: 90%;
+    left: 5%;
+    right: 5%;
+    position: inherit;
+    box-sizing: content-box;
+    margin: 5px 0;
+    border-radius: 5%;
+}
+
+button {
+    position: relative;
+    background-color: #d8be61;
+    margin: 0;
+    margin-top: 5px;
+    text-align: center;
+    font-size: 1.6em; 
+    font-weight: 500;
+    height: 10%;
+    width: 80%;
+    left: 8%;
+    right: 10%;
+    box-sizing: content-box;
+    border-radius: 5%;
+}
+
+#home-page #forms {
+    position: relative;
+}
+
+#horizonal-split {
+    float: left;
+    width: 2px;
+    height: 90%;
+    top: 5%;
+    border-radius: 50%;
+    position: relative;
+    border: #d8be61 solid;
+    left: 1%;
+    right: 1%;
+    box-sizing: border-box;
+}
+
+.form-container {
+    margin: auto;
+    height: 100%;
+    float: left;
+    width: 40%;
+    padding-left: 5%;
+    padding-right: 4%;
+}
+
+.form {
+    margin: auto;
+    position: relative;
+    width: 100%;
+    height: 80%;
+}
+
+#login {
+    top: 15%;
+    bottom: 15%;
+    box-sizing: content-box;
+}
+
+#login input {
+    height: 15%;
+}
+
+#login button {
+    position: relative;
+    top: 10%;
+    height: 20%;
+}
+
+#registration {
+    top: 10%;
+    bottom: 10%;
+}
+
+#registration input {
+    height: 10%;
+    width: 90%;
+}
+
+#registration button {
+    position: relative;
+    height: 20%;
+    top: 5%;
 }
