--- a/src/styles/admin-home.css
+++ b/src/styles/admin-home.css
@@ -1,10 +1,10 @@
 @import url("../index.css");
 
-#home-page {
+#admin-home {
     top: 20%;
     height: 60%;
-    width: 50%;
-    left: 25%;
+    width: 30%;
+    left: 35%;
     background-color: #064106; 
     border-radius: 5%;
     position: absolute;
@@ -39,51 +39,11 @@ button {
     border-radius: 5%;
 }
 
-#home-page #forms {
-    position: relative;
-}
-
-#horizonal-split {
-    float: left;
-    width: 2px;
-    height: 90%;
-    top: 5%;
-    border-radius: 50%;
-    position: relative;
-    border: #d8be61 solid;
-    left: 1%;
-    right: 1%;
-    box-sizing: border-box;
-}
-
 .form-container {
     margin: auto;
     height: 100%;
     float: left;
-    width: 40%;
-    padding-left: 5%;
-    padding-right: 4%;
-}
-
-.form {
-    margin: auto;
-    position: relative;
-    width: 100%;
-    height: 80%;
-}
-
-#registration {
-    top: 10%;
-    bottom: 10%;
-}
-
-#registration input {
-    height: 10%;
     width: 90%;
-}
-
-#registration button {
-    position: relative;
-    height: 20%;
-    top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
