--- a/src/styles/nav-bar.css
+++ b/src/styles/nav-bar.css
@@ -16,6 +16,13 @@
     padding: 0;
     margin: 0;
 }
+.admin-nav-list-bar-element {
+    position: relative;
+    box-sizing: border-box;
+    width: 33%;
+    height: 100%;
+    float: left;
+}
 
 .nav-list-bar-element {
     position: relative;
