--- a/src/styles/admin-home.css
+++ b/src/styles/admin-home.css
@@ -1,49 +1,18 @@
 @import url("../index.css");
 
-#admin-home {
-    top: 30%;
-    height: 40%;
-    width: 30%;
-    left: 35%;
-    background-color: #064106; 
-    border-radius: 5%;
+#admin-content {
     position: absolute;
-}
-
-input {
-    text-align: center;
-    background-color: #e4d18e;
-    font-size: 1.3em; 
-    width: 90%;
-    left: 5%;
-    right: 5%;
-    position: inherit;
-    box-sizing: content-box;
-    margin: 5px 0;
-    border-radius: 5%;
-}
-
-button {
-    position: relative;
-    background-color: #d8be61;
-    margin: 0;
-    margin-top: 5px;
-    text-align: center;
-    font-size: 1.6em; 
-    font-weight: 500;
-    height: 10%;
-    width: 80%;
-    left: 8%;
-    right: 10%;
-    box-sizing: content-box;
-    border-radius: 5%;
-}
-
-.admin-form-container {
     margin: auto;
-    height: 100%;
-    float: left;
     width: 90%;
-    padding-left: 5%;
-    padding-right: 5%;
+    height: 90%;
+    top: 20%;
+    left: 5%;
+    box-sizing: content-box;
+}
+
+#admin-requests {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 8%;
 }
